# otpSimpleMozesPartner

./: .env  Cargo.toml
src/: handler.rs  main.rs
src/ticket/: mod.rs
